# CastXML

./: .clang-format  .gitattributes  CMakeLists.txt  NOTICE  README.rst
.github/workflows/: build_and_test.yml
doc/: CMakeLists.txt  conf.py.in  index.rst
doc/manual/: castxml.1.rst  castxml.xsd
doc/templates/: layout.html
share/castxml/: detect_vs.c  detect_vs.cpp
src/: .gitattributes  CMakeLists.txt  ClangResourceDir.txt.in  Detect.cxx  Detect.h  Options.h  Output.cxx  Output.h  RunClang.cxx  RunClang.h  SourceDir.txt.in  Utils.cxx  Utils.h  Version.cmake  Version.h.in  castxml.cxx  clang-format.bash
src/kwsys/: CMakeLists.txt
test/: CMakeLists.txt  cc-gnu.c  cc-msvc.c  cc-msvc.cmake  run.cmake
test/expect/: castxml1.any.ArrayType-incomplete.xml.txt  castxml1.any.ArrayType.xml.txt  castxml1.any.Atomic-int-const.xml.txt  castxml1.any.Atomic-int.xml.txt  castxml1.any.Atomic-ptr.xml.txt  castxml1.any.Atomic-struct.xml.txt  castxml1.any.Class-abstract.xml.txt  castxml1.any.Class-annotate.xml.txt  castxml1.any.Class-base-offset.xml.txt  castxml1.any.Class-base-typedef.xml.txt  castxml1.any.Class-deprecated-long.xml.txt  castxml1.any.Class-deprecated.xml.txt  castxml1.any.Class-forward.xml.txt  castxml1.any.Class-friends.xml.txt  castxml1.any.Class-implicit-member-access-mutable.xml.txt  castxml1.any.Class-implicit-member-access.xml.txt  castxml1.any.Class-implicit-member-array.xml.txt  castxml1.any.Class-implicit-member-bad-base.xml.txt  castxml1.any.Class-implicit-member-const-aggregate.xml.txt  castxml1.any.Class-implicit-member-const.xml.txt  castxml1.any.Class-implicit-member-reference.xml.txt  castxml1.any.Class-implicit-members.xml.txt  castxml1.any.Class-incomplete-twice.xml.txt  castxml1.any.Class-incomplete.xml.txt  castxml1.any.Class-member-Struct-anonymous.xml.txt  castxml1.any.Class-member-Union-anonymous.xml.txt  castxml1.any.Class-member-injected.xml.txt  castxml1.any.Class-member-template-access.xml.txt  castxml1.any.Class-member-template.xml.txt  castxml1.any.Class-ms-dllexport.xml.txt  castxml1.any.Class-ms-dllimport.xml.txt  castxml1.any.Class-partial-template-member-Typedef.xml.txt  castxml1.any.Class-template-Method-Argument-const.xml.txt  castxml1.any.Class-template-Method-Argument-default.xml.txt  castxml1.any.Class-template-Method-return-const.xml.txt  castxml1.any.Class-template-constructor-template.xml.txt  castxml1.any.Class-template-friends.xml.txt  castxml1.any.Class-template-member-Typedef-const.xml.txt  castxml1.any.Class-template-member-Typedef.xml.txt  castxml1.any.Class-template-member-nontemplate-Typedef.xml.txt  (+616 more)
test/input/: .gitattributes  ArrayType-incomplete.cxx  ArrayType.cxx  Atomic-int-const.c  Atomic-int.c  Atomic-ptr.cxx  Atomic-struct.c  CXXLiteral.cxx  Class-abstract.cxx  Class-annotate.cxx  Class-base-offset.cxx  Class-base-typedef.cxx  Class-bases.cxx  Class-deprecated-long.cxx  Class-deprecated.cxx  Class-forward.cxx  Class-friends.cxx  Class-implicit-member-access-mutable.cxx  Class-implicit-member-access.cxx  Class-implicit-member-array.cxx  Class-implicit-member-bad-base.cxx  Class-implicit-member-const-aggregate.cxx  Class-implicit-member-const.cxx  Class-implicit-member-reference.cxx  Class-implicit-members.cxx  Class-incomplete-twice.cxx  Class-member-Struct-anonymous.cxx  Class-member-Union-anonymous.cxx  Class-member-injected.cxx  Class-member-template-access.cxx  Class-member-template.cxx  Class-ms-dllexport.cxx  Class-ms-dllimport.cxx  Class-partial-template-member-Typedef.cxx  Class-template-Method-Argument-const.cxx  Class-template-Method-Argument-default.cxx  Class-template-Method-return-const.cxx  Class-template-bases.cxx  Class-template-constructor-template.cxx  Class-template-friends.cxx  (+186 more)
